--- a/co-work/lesson1/css/lession/01.css
+++ b/co-work/lesson1/css/lession/01.css
@@ -1,4 +1,7 @@
-.navbar-hover ul li a:hover {
+.navbar-hover ul li.nav-item a:hover {
+    border-bottom: 1px solid #F5A637;
+}
+.navbar-hover ul li.nav-item.active-item{
     border-bottom: 1px solid #F5A637;
 }
 
